change radios to buttons so that the generated questions work on click. add progress bars and images

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,9 @@
-.class{
-    height: 500px;}
+#ninja-img{
+    height: 150px;
+    width:auto;
+}
+
+#baddy-img{
+    height: 150px;
+    width:auto;
 }
