animated ninja star after checking answer

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,3 +11,15 @@
 #belt-number{
     color:transparent;
 }
+
+.fight-container {
+    height: 50px;
+    position: relative;
+    overflow-x: hidden;
+  }
+  
+#ninja-star {
+    width: auto;
+    height: 100%;
+    position: absolute;
+  }
