--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,29 @@
+
+body{
+    font-family: 'Indie Flower', cursive;
+    font-size: 2rem;
+}
+
+#container{
+    background: url('./assets/images/background.jpg') repeat 0 0;
+    display: block;
+    height: 100vh;
+    width: 100vw;
+}
+
+h1{
+    font-family: 'Bangers', cursive;
+    font-size: 3rem;
+    color: orange;
+    -webkit-text-stroke: 2px black;
+    text-shadow:
+        3px 3px 0 white,
+        -1px -1px 0 white,  
+        1px -1px 0 white,
+        -1px 1px 0 white,
+        1px 1px 0 white;;
+}
+
 #ninja-img{
     height: auto;
     width:100%;
@@ -16,10 +42,80 @@
     height: 50px;
     position: relative;
     overflow-x: hidden;
-  }
+}
   
 #ninja-star {
     width: auto;
     height: 100%;
     position: absolute;
-  }
+}
+
+/* Buttons */
+.btn-header{
+    height: 50px;
+    width: 50px;
+    font-size: 1rem;
+    background-color: black;
+    color: white;
+    border: none;
+}
+
+.btn-header:hover{
+    background-color: white;
+    color: black;
+    border: black 1px solid;
+}
+
+.btn--white{
+    color: black;
+    background-color: white;
+    border-color: black;
+}
+
+.btn--yellow{
+    color: black;
+    background-color: yellow;
+    border-color: black;
+}
+
+.btn--orange{
+    color: black;
+    background-color: orange;
+    border-color: black;
+}
+
+.btn--green{
+    color: white;
+    background-color: green;
+    border-color: black;
+}
+
+.btn--purple{
+    color: white;
+    background-color: purple;
+    border-color: black;
+}
+
+.btn--blue{
+    color: white;
+    background-color: blue;
+    border-color: black;
+}
+
+.btn--brown{
+    color: white;
+    background-color: brown;
+    border-color: black;
+}
+
+.btn--red{
+    color: white;
+    background-color: red;
+    border-color: black;
+}
+
+.btn--black{
+    color: white;
+    background-color: black;
+    border-color: black;
+}
