--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,8 @@ body{
 }
 
 #container{
-    background: url('./assets/images/background.jpg') repeat 0 0;
+    background: white url('../images/background-light.jpg') no-repeat center top;
+    background-size: cover;
     display: block;
     height: 100vh;
     width: 100vw;
