--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,7 +14,7 @@ body{
 
 h1{
     font-family: 'Bangers', cursive;
-    font-size: 3rem;
+    font-size: 5rem;
     color: orange;
     -webkit-text-stroke: 2px black;
     text-shadow:
@@ -38,9 +38,9 @@ h1{
     width:100%;
 }
 
-#baddy-img{
-    height: 150px;
-    width:auto;
+#dragon-img{
+    height: auto;
+    width:100%;
 }
 
 .fight-container {
@@ -50,6 +50,12 @@ h1{
 }
   
 #ninja-star {
+    width: auto;
+    height: 100%;
+    position: absolute;
+}
+
+#fire-ball {
     width: auto;
     height: 100%;
     position: absolute;
@@ -66,6 +72,21 @@ h1{
 }
 
 .btn-header:hover{
+    background-color: white;
+    color: black;
+    border: black 1px solid;
+}
+
+#btn-submit{
+    height: 50px;
+    width: auto;
+    font-size: 1rem;
+    background-color: black;
+    color: white;
+    border: none;
+}
+
+#btn-submit:hover{
     background-color: white;
     color: black;
     border: black 1px solid;
