--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,16 +1,42 @@
-
 body{
     font-family: 'Indie Flower', cursive;
-    font-size: 2rem;
+    font-size: 1.4rem;
 }
 
-#container{
-    background: white url('../images/background-light.jpg') no-repeat center top;
-    background-size: cover;
-    display: block;
-    height: 100vh;
-    width: 100vw;
+.game-area{
+    font-size: 3rem;
 }
+
+/* Backgroun Img */
+@media (min-width: 1025px) {
+    #container{
+        background: white url('../images/background-light.jpg') no-repeat center top;
+        background-size: cover;
+        display: block;
+        height: 100vh;
+        width: 100vw;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
+    #container{
+        background: white url('../images/background-light.jpg') no-repeat center top;
+        background-size: cover;
+        display: block;
+        height: 100vh;
+        width: 100vw;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    #container{
+        background: white url('../images/background-mobile.jpg') no-repeat center top;
+        background-size: cover;
+        display: block;
+        height: 100vh;
+        width: 100vw;
+    }
+  }
 
 h1{
     font-family: 'Bangers', cursive;
