fixed progress bars with padding and changed if else

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -214,3 +214,12 @@ h1{
     background-color: black;
     border-color: black;
 }
+
+/* Progress Bar */
+#dragon-progress{
+    width: 0;
+}
+
+#ninja-progress{
+    width: 0;
+}
