--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -223,3 +223,15 @@ h1{
 #ninja-progress{
     width: 0;
 }
+
+/* Answer Box */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
+}
