--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,8 +52,15 @@ h1{
 
 #nextModal{
     height: auto;
-    width:75%;
     font-size:1.2rem;
+}
+
+#winModal{
+    font-size: 1.2rem
+}
+
+#replayModal{
+    font-size: 1.2rem
 }
 
 .incorrect-container{
@@ -84,7 +91,7 @@ h1{
 
 #ninja-sad{
     height: auto;
-    width:75%;
+    width:60%;
 }
 
 #dragon-img{
@@ -151,7 +158,7 @@ h1{
 }
 
 #btn-submit{
-    height: 100%;
+    height: 50px;
     width: 50px;
     background-color: black;
     color: white;
