--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,7 +4,7 @@ body {
 
 /* Background Img */
 @media (min-width: 1025px) {
-    #game-container{
+    body{
         background: white url('../images/background-light.jpg') no-repeat center top;
         background-size: cover;
         display: block;
@@ -14,7 +14,7 @@ body {
 }
 
 @media (min-width: 481px) and (max-width: 1024px) {
-    #game-container{
+    body{
         background: white url('../images/background-light.jpg') no-repeat center top;
         background-size: cover;
         display: block;
@@ -24,7 +24,7 @@ body {
 }
 
 @media screen and (max-width: 480px) {
-    #game-container{
+    body{
         background: white url('../images/background-mobile.jpg') no-repeat center top;
         background-size: cover;
         display: block;
@@ -51,7 +51,6 @@ h1{
 }
 
 #nextModal{
-    height: auto;
     font-size:1.2rem;
 }
 
@@ -79,7 +78,6 @@ h1{
 }
 
 .ninja-img-modal{
-    height: auto;
     width:75%;
 }
 
