--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,43 @@
+:root {
+    --richBlackForeground: #0F1A20;
+    --white: #f8f8f8;
+    --black: #222;
+    --whiteTrans: rgba(255, 255, 255, 0.9);
+    --blackTrans: rgba(0, 0, 0, 0.8);
+}
+
+.light-theme {
+    --mainBg: var(--white);
+    --fontColor: var(--black);
+    --modalBg: var(--whiteTrans);
+    --overlayBg: transparent;
+}
+  
+.dark-theme {
+    --mainBg: var(--richBlackForeground);
+    --fontColor: var(--white);
+    --modalBg: var(--black);
+    --overlayBg: var(--blackTrans);
+}
+
 body {
     font-family: 'Indie Flower', cursive;
+    color: var(--fontColor);
 }
 
 /* Background Img */
+.layer {
+    background-color: var(--overlayBg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 @media (min-width: 1025px) {
     body{
-        background: white url('../images/bg_sunset.jpg') no-repeat center top;
+        background: var(--white) url('../images/bg_sunset.jpg') no-repeat center top;
         background-size: cover;
         display: block;
         height: 100vh;
@@ -15,7 +47,7 @@ body {
 
 @media (min-width: 481px) and (max-width: 1024px) {
     body{
-        background: white url('../images/bg_sunset.jpg') no-repeat center top;
+        background: var(--white) url('../images/bg_sunset.jpg') no-repeat center top;
         background-size: cover;
         display: block;
         height: 100vh;
@@ -25,7 +57,7 @@ body {
 
 @media screen and (max-width: 480px) {
     body{
-        background: white url('../images/bg_sunset.jpg') no-repeat center top;
+        background: var(--white) url('../images/bg_sunset.jpg') no-repeat center top;
         background-size: cover;
         display: block;
         height: 100vh;
@@ -35,40 +67,34 @@ body {
 
 .fight-scene{
     position: fixed;
-    bottom:0px;
+    bottom:10%;
 }
 
 h1{
     font-family: 'Bangers', cursive;
     font-size: 9vw;
-    color: black;
-    -webkit-text-stroke: 2px white;
+    color: var(--black);
+    -webkit-text-stroke: 2px var(--white);
     text-shadow:
-        3px 3px 0 black,
-        -1px -1px 0 black,  
-        1px -1px 0 black,
-        -1px 1px 0 black,
-        1px 1px 0 black;;
+        3px 3px 0 var(--black),
+        -1px -1px 0 var(--black),  
+        1px -1px 0 var(--black),
+        -1px 1px 0 var(--black),
+        1px 1px 0 var(--black);
 }
 
-#helpModal{
+.modal{
     font-size:1.2rem;
+    color: var(--fontColor);
+    border: var(--fontColor) 3px solid;
 }
 
-#nextModal{
-    font-size:1.2rem;
-}
-
-#winModal{
-    font-size: 1.2rem
-}
-
-#replayModal{
-    font-size: 1.2rem
+.modal-content{
+    background-color: var(--modalBg);
 }
 
 .scores{
-    color: white;
+    color: var(--white);
 }
 
 #ninja-img{
@@ -119,59 +145,35 @@ h1{
     height: 50px;
     width: 50px;
     font-size: 1rem;
-    background-color: black;
-    color: white;
-    border: transparent 1px solid;
+    background-color: var(--mainBg);
+    color: var(--fontColor);
+    border: var(--fontColor) 1px solid;
 }
 
 .btn-header:hover{
-    background-color: white;
-    color: black;
-    border: black 1px solid;
-}
-
-#btn-sound{
-    display: none;
-
-}
-#btn-sound-label{
-    height: 50px;
-    width: 50px;
-    font-size: 1rem;
-    background-color: black;
-    color: white;
-    border: transparent 1px solid;
-    border-radius: 0.25rem;
-}
-#btn-sound-label i{
-    padding-top: 15px;
-}
-
-#btn-sound-label:hover{
-    background-color: white;
-    color: black;
-    border: black 1px solid;
-    cursor: pointer;
+    background-color: var(--fontColor);
+    color: var(--mainBg);
+    border: var(--fontColor) 1px solid;
 }
 
 #btn-submit{
     height: 50px;
     width: 50px;
-    background-color: black;
-    color: white;
-    border: transparent 1px solid;
+    background-color: var(--mainBg);
+    color: var(--fontColor);
+    border: var(--fontColor) 1px solid;
 }
 
 #btn-submit:hover{
-    background-color: white;
-    color: black;
-    border: black 1px solid;
+    background-color: var(--fontColor);
+    color: var(--mainBg);
+    border: var(--mainBg) 1px solid;
 }
 
 .btn--black{
-    color: white;
-    background-color: black;
-    border-color: black;
+    color: var(--fontColor);
+    background-color: var(--mainBg);
+    border: var(--fontColor) 3px solid;
 }
 
 /* Progress Bar */
@@ -187,13 +189,12 @@ h1{
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    /* display: none; <- Crashes Chrome on hover */
     -webkit-appearance: none;
-    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+    margin: 0;
 }
 
 input[type=number] {
-    -moz-appearance:textfield; /* Firefox */
+    -moz-appearance:textfield;
 }
 
 /* HIDE RADIO */
@@ -211,17 +212,39 @@ input[type=number] {
   
   /* CHECKED STYLES */
   [type=radio]:checked + img {
-    background-color: #000;
+    background-color: var(--black);
     border-radius: 5px;
   }
 
-  .belt-image{
+.belt-image{
       width:100px;
       height: 100px;
-  }
+}
 
-  .game-intro{
-      background-color: rgba(255, 255, 255, 0.4);
+.game-intro{
+      background-color: var(--modalBg);
       border-radius: 50px;
-      border: #000 solid 3px;
-  }
+      border: var(--fontColor) solid 3px;
+}
+
+#btn-home{
+    position: fixed;
+    bottom:0px;
+    right: 10px;
+    margin: 20px;
+    background-color: var(--mainBg);
+    color: var(--fontColor);
+    height: 50px;
+    width: 50px;
+    font-size: 1rem;
+    background-color: var(--mainBg);
+    color: var(--fontColor);
+    border: var(--fontColor) 1px solid;
+}
+
+
+#btn-home:hover{
+    background-color: var(--fontColor);
+    color: var(--mainBg);
+    border: var(--mainBg) 1px solid;
+}
