--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,10 @@
 :root {
-    --richBlackForeground: #0F1A20;
-    --white: #f8f8f8;
-    --black: #222;
+    --white: #E7E2DB;
+    --lightOrange: #F8BA50;
+    --midOrange: #FB940A;
+    --darkOrange: #EA7607;
+    --lightGrey: #b3b3b3; 
+    --black: #020101;
     --whiteTrans: rgba(255, 255, 255, 0.9);
     --blackTrans: rgba(0, 0, 0, 0.8);
 }
@@ -14,8 +17,8 @@
 }
   
 .dark-theme {
-    --mainBg: var(--richBlackForeground);
-    --fontColor: var(--white);
+    --mainBg: var(--black);
+    --fontColor: var(--lightGrey);
     --modalBg: var(--black);
     --overlayBg: var(--blackTrans);
 }
@@ -97,7 +100,7 @@ h1{
 }
 
 .footer{
-    color: var(--white);
+    color: var(--darkOrange);
     position: fixed;
     bottom: 0px;
     left: 0px;
@@ -108,7 +111,7 @@ h1{
 
 .footer a{
     text-decoration: none;
-    color: var(--white);
+    color: var(--darkOrange);
 }
 
 #ninja-img{
@@ -200,7 +203,6 @@ h1{
 }
 
 /* Answer Box */
-
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -209,7 +211,14 @@ input::-webkit-inner-spin-button {
 
 input[type=number] {
     -moz-appearance:textfield;
+    background-color: var(--mainBg);
 }
+
+.input:focus {
+    outline: none !important;
+    border:1px solid var(--midOrange);
+    box-shadow: 0 0 10px var(--lightOrange);
+  }
 
 /* HIDE RADIO */
 [type=radio] { 
@@ -229,6 +238,16 @@ input[type=number] {
     background-color: var(--fontColor);
     border-radius: 5px;
   }
+
+.form-check-input:checked {
+    background-color: var(--midOrange);
+    border-color: var(--midOrange);
+}
+
+.form-switch .form-check-input:focus {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.25%29'/%3e%3c/svg%3e");
+    border-color: var(--lightOrange);
+}
 
 .belt-image{
       width:100px;
@@ -252,18 +271,15 @@ input[type=number] {
 }
 
 #btn-home{
-    background-color: var(--mainBg);
-    color: var(--fontColor);
+    background-color: var(--black);
+    color: var(--darkOrange);
     height: 50px;
     font-size: 1rem;
-    background-color: var(--mainBg);
-    color: var(--fontColor);
-    border: var(--fontColor) 1px solid;
+    border: var(--black) 1px solid;
 }
 
-
 #btn-home:hover{
-    background-color: var(--fontColor);
-    color: var(--mainBg);
-    border: var(--mainBg) 1px solid;
+    background-color: var(--darkOrange);
+    color: var(--black);
+    border: var(--black) 1px solid;
 }
