--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,7 +74,7 @@ h2{
     background-color: var(--modalBg);
 }
 
-.footer{
+footer{
     color: var(--darkOrange);
     position: fixed;
     bottom: 0px;
@@ -85,7 +85,7 @@ h2{
     height: 75px;
 }
 
-.footer a{
+footer a{
     text-decoration: none;
     color: var(--darkOrange);
 }
