improve contrast of footer

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,7 +78,7 @@ h2{
 }
 
 footer{
-    color: var(--darkOrange);
+    color: var(--lightOrange);
     position: fixed;
     bottom: 0px;
     left: 0px;
@@ -87,7 +87,7 @@ footer{
 
 footer a{
     text-decoration: none;
-    color: var(--darkOrange);
+    color: var(--lightOrange);
 }
 
 .weapon_container {
@@ -170,7 +170,7 @@ input[type=number] {
 .input:focus {
     outline: none !important;
     border:1px solid var(--midOrange);
-    box-shadow: 0 0 10px var(--lightOrange);
+    box-shadow: 0 0 10px var(--darkOrange);
 }
 
 /* HIDE RADIO */
@@ -199,7 +199,7 @@ input[type=number] {
 
 .form-switch .form-check-input:focus {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.25%29'/%3e%3c/svg%3e");
-    border-color: var(--lightOrange);
+    border-color: var(--darkOrange);
 }
 
 /* BUTTONS */
@@ -228,7 +228,7 @@ input[type=number] {
 }
 
 .footer_btn--contact:hover{
-    background-color: var(--darkOrange);
+    background-color: var(--lightOrange);
     color: var(--black);
     border: var(--black) 1px solid;
     border-radius: 5px;
