improve landscape orientation design

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -103,6 +103,14 @@ footer a{
     right:0;
 }
 
+.progress{
+    max-width: 25vh;
+}
+
+.battle_img--character{
+    max-height: 25vh;
+}
+
 /* IMAGES */
 .modal_img--ninja{
     height: auto;
