--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -276,3 +276,15 @@ input[type=number] {
     z-index: 1;
     padding: 10%;
 }
+
+.container404 {
+    background-color: var(--modalBg);
+    border-radius: 25px;
+    border: var(--fontColor) solid 3px;
+    width: 100%;
+}
+
+#ninja404 {
+    height: auto;
+    width: 30vw;
+}
