--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,6 +56,7 @@ h1 {
 
 h2 {
     color: var(--black);
+    font-size: large;
     text-shadow:
         -1px -1px 0 var(--white),
         1px -1px 0 var(--white),
